# bio-seq-algos

./: Cargo.toml  README.md
src/: durbin_algo.rs  lib.rs  utils.rs
tests/: lib.rs  tests.rs
