[package]
name = "bio-seq-algos"
version = "0.1.12"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "\"bio-seq-algos\", Library of Algorithms about Biological Sequences"
repository = "https://github.com/heartsh/bio-seq-algos"
readme = "README.md"
keywords = ["bioinformatics", "biological-sequence"]
license = "MIT"

[dependencies]
fnv = "1.0"
lazy_static = "0.1"

[lib]
path = "src/lib.rs"
name = "bio_seq_algos"
